--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <section class="top">
 
     <p class="text-center">THE GREAT</p>
-    <h1 class="text-center display-3">RGB(<SPAN>0<SPAN>,<SPAN>0</SPAN>,</SPAN>0</SPAN>)</h1>
+    <h1 class="text-center display-3">RGB(<SPAN id="rgb_1">0<SPAN>,<SPAN id="rgb_2">0</SPAN>,<SPAN id="rgb_3">0</SPAN>)</h1>
     <p class="text-center">GUESSING GAME</p>
 
 </section >
@@ -31,28 +31,22 @@
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-lg-5 box-4">
+    <div class="row d-flex justify-content-center align-items-center">
+        <div class="col-lg-3 box-4">
             
         </div>
-        <div class="col-lg-2 box-5">
+        <div class="col-lg-3 box-5">
 
         </div>
-        <div class="col-lg-5 box-6">
+        <div class="col-lg-3 box-6">
 
         </div>
     </div>
 
 </div>
 
-
-
-
-
-
-
     <script src="./main.js"></script>
-    <script src="./js/bootstrap.bundle.min.js"></script>
     <script src="./js/jquery-3.4.1.min.js"></script>
+    <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
