--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css">
+    
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -17,6 +18,22 @@
     <p class="text-center">GUESSING GAME</p>
 
 </section >
+<section>
+    <div class="bar">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 reset">
+                    <button class="btn btn-primary reset">RESET</button>    
+                </div>
+                <div class="col-lg-4 result"></div>
+                <div class="col-lg-4">
+                    <button class="btn btn-primary easy">EASY</button>
+                    <button class="btn btn-primary hard">HARD</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 <div class="container">
     <div class="square ml-5"></div>
@@ -27,7 +44,7 @@
     <div class="square"></div>
 
 </div>
-
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="./main.js"></script>
     <script src="./js/jquery-3.4.1.min.js"></script>
     <script src="./js/bootstrap.bundle.min.js"></script>
